crates/quarto-core/tests/integration/snapshots/crossrefs_theorems__pptx.snap
---
source: crates/xtask/src/capture_pandoc_goldens.rs
expression: extraction.to_string()
---
core_props:
  title: Theorem Test
slide 1:
  Theorem Test
slide 2:
  Theorem 1 (Line) The equation of any straight line, called a linear equation, can be written as:
  
  See Theorem 1.
math:
  y=mx+b
media: []
image_relationships: []
drawing_count: 0
page_break_count: 0
